// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipGroup /> selectionType="multiple" should render with selectionType="multiple" 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12.c12.c12.c12.c12 {
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c13.c13.c13.c13.c13 {
  background-color: transparent;
  border-radius: 9999px;
  border-color: hsla(211,20%,52%,0.18);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c15.c15.c15.c15.c15:hover {
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c11.c11.c11.c11.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c11.c11.c11.c11.c11:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c11.c11.c11.c11.c11:hover + div {
  border-color: hsla(211,20%,52%,0.18);
  background-color: hsla(0,0%,100%,0);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-167-label"
      class="c0"
      data-blade-component="chip-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="chip-group-167-label"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="visually-hidden"
        >
          <p
            class="c5"
            data-blade-component="text"
          />
        </div>
        <div
          class="c6"
          data-blade-component="base-box"
        >
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Orange
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChipGroup /> selectionType="single" should render with selectionType="single" 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  margin-bottom: 8px;
  margin-right: 8px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12.c12.c12.c12.c12 {
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 12px;
  padding-left: 12px;
  height: 28px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 9999px;
  border-width: 0.5px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
}

.c13.c13.c13.c13.c13 {
  background-color: transparent;
  border-radius: 9999px;
  border-color: hsla(211,20%,52%,0.18);
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: left;
  text-overflow: ellipsis;
  max-width: 420px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-color: transparent;
}

.c15.c15.c15.c15.c15:hover {
  background-color: hsla(211,20%,52%,0.06);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c11.c11.c11.c11.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c11.c11.c11.c11.c11:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c11.c11.c11.c11.c11:hover + div {
  border-color: hsla(211,20%,52%,0.18);
  background-color: hsla(0,0%,100%,0);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

@media screen and (min-width:320px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c12.c12.c12.c12.c12 {
    border-style: solid;
  }
}

@media screen and (min-width:320px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c14.c14.c14.c14.c14 {
    border-style: solid;
  }
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="chip-group-7-label"
      class="c0"
      data-blade-component="chip-group"
      role="radiogroup"
    >
      <span
        data-blade-component="form-label"
        id="chip-group-7-label"
        style="width: auto; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              />
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="visually-hidden"
        >
          <p
            class="c5"
            data-blade-component="text"
          />
        </div>
        <div
          class="c6"
          data-blade-component="base-box"
        >
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-1-helptext-2"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="radio"
                      type="radio"
                      value="apple"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-3-helptext-4"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="radio"
                      type="radio"
                      value="mango"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c7"
            data-blade-component="base-box"
          >
            <div
              class="c8"
              data-blade-component="chip"
            >
              <label
                class="c9"
                data-blade-component="chip-label"
                style="cursor: pointer;"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c10"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-describedby="radio-5-helptext-6"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c11"
                      role="radio"
                      type="radio"
                      value="orange"
                    />
                    <div
                      class="c12 c13"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c14 c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          Orange
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
